manifest/wordpress-apache2/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wp-apache
  name: wp-apache
  namespace: apache
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /wp-admin/install.php
  #   service.beta.kubernetes.io/ingress.class: alb
  #   #service.beta.kubernetes.io/aws-load-balancer-type: external
  #   #service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
  #   service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: wp-apache
    tier: frontend
  sessionAffinity: None
  type: ClusterIP
