manifest/wordpress-apache2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-apache
  namespace: apache
  annotations:

  # Ingress Core Settings  
    #kubernetes.io/ingress.class: "alb"
    #alb.ingress.kubernetes.io/load-balancer-name: k8s-wordpress-apache0
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    
    #alb.ingress.kubernetes.io/tags: Environment=dev,Team=app
    # Group name
    alb.ingress.kubernetes.io/group.name: wordpress-tgb

    # Rule for forward request 
    alb.ingress.kubernetes.io/actions.redirect-to-https: >
      redirect:
        port: '443'
        protocol: HTTPS
    alb.ingress.kubernetes.io/actions.forward-to-tg: >
      forward:
        targetGroups:
        - targetGroupArn: arn:aws:elasticloadbalancing:ap-south-1:187451058634:targetgroup/k8s-apache-wpapache-2e4bd9f45b/8226102e5a04879d
    alb.ingress.kubernetes.io/actions.default-action: redirect-to-https

    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    alb.ingress.kubernetes.io/healthcheck-path: /wp-admin/install.php
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '302'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[ {"HTTP":80} , {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:187451058634:certificate/b8520d8f-6ac9-4df1-a239-ba9e4dd7aed7
        
    #alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01 #Optional (Picks default if not used)  
    
    # SSL Redirect Setting
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'   

spec:
  ingressClassName: alb
  rules:
  - host: narola.ws
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wp-apache
            port:
              number: 80
          
  tls:
  - hosts:
    - narola.ws
    secretName: wordpress-dev
